# self

./: .breakpoints  alert.py  component.py  database.py  main.py  online.py  pyproject.toml
cogs/: event.py  events.py  music.py  music.txt  musics.py  voice.py  voices.py
component/: music.py
voice/: action.py  music.py  player.py  song.py
voice/source/: c_mon.m4a  fuck.m4a  wow.m4a  ควยไรอะ.m4a  ทำไรกัน.m4a  ทำไรหย๋อ.m4a  ฮาโหลวว.m4a  เย็ดแม่.m4a
