[tool.poetry]
name = "repl_python3_LongWillingRuntimes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
replit = "^3.2.4"
PyNaCl = "^1.4.0"
discord-py-slash-command = "^3.0.1"
gTTS = "^2.2.3"
youtube_dl = "^2021.6.6"
requests = "^2.26.0"
consultor = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
